# picowal

./: .gitignore  CMakeLists.txt  README.md  bench_run.py  bootstrap.kicad_sch  breadboard_pico.py  clock_tree.kicad_sch  cluster_board.kicad_pcb  cluster_board.kicad_pro  cluster_board.kicad_sch  edge_node.kicad_sch  edge_node_a.kicad_sch  edge_node_b.kicad_sch  flash.bat  fpga_subsystem.kicad_sch  gen_bitnet_splice.py  gen_bitnet_weights.py  gen_tile_weights.py  generate_board.py  generate_hx.py  generate_hx_cu.py  generate_matmul_accel.py  generate_midi.py  generate_mini.py  generate_pico.py  generate_picowal.py  hx8k_megacluster.py  ota_deploy.py  pico_flash_region.ld  picoscript.py  picoscript_lang.py  picoscript_opcodes.py  picowal_m2_pinout.py  power_supply.kicad_sch  stress_test.py  tcp_test.py  udp_client.py  worker_node.kicad_sch
.github/: copilot-instructions.md  copilot-mcp.yml
bootloader/: CMakeLists.txt  main.c
client/PicoWal.Client/: Exceptions.cs  Models.cs  PicoWalAuth.cs  PicoWalClient.cs
client/js/: index.html  picowal.js
cluster/: CMakeLists.txt  main.c
cluster/common/: card_cache.c  card_cache.h  config.h  crc16.c  isa.h  packet.h  ring.c  ring.h  vm.c
cluster/detect/: detect.c  detect.h
cluster/discovery/: discovery.c  discovery.h
cluster/docs/: ISA.md  PINOUT.md
cluster/drivers/: sd.c  sd.h  w5500.c  w5500.h
cluster/pio/: ring_uart.pio
cluster/projection/: main.c
cluster/roles/: head.c  roles.h  storage.c  worker.c
cluster/worker/: main.c
docs/: BENCHMARKS.md  FPGA_DESIGN.md
drivers/: CMakeLists.txt
drivers/lcd/: ili9488.c  ili9488.h
drivers/sd/: sd_card.c  sd_card.h  sd_spi.pio
drivers/touch/: xpt2046.c  xpt2046.h
fpga/: Makefile
fpga/constraints/: alchitry_cu.pcf
fpga/src/: auth.v  crc.v  first_boot.v  http_parser.v  http_parser_tb.v  kv_engine.v  merge_engine.v  pll.v  reset_sync.v  sd_init.v  sd_read.v  sd_spi.v  sd_write.v  siphash.v  spi_master.v  status_counters.v  ui_rom.hex  ui_rom.v  w5500_ctrl.v  w5500_spi.v
hydra_12/: hydra_12.kicad_pcb  hydra_12.kicad_pro  hydra_12.kicad_sch
hydra_1x/: hydra_1x.kicad_pcb  hydra_1x.kicad_pro  hydra_1x.kicad_sch
hydra_2x/: hydra_2x.kicad_pcb  hydra_2x.kicad_pro  hydra_2x.kicad_sch
hydra_3x/: hydra_3x.kicad_pcb  hydra_3x.kicad_pro  hydra_3x.kicad_sch  slice.kicad_sch
hydra_4/: hydra_4.kicad_pcb  hydra_4.kicad_pro  hydra_4.kicad_sch
hydra_backplane/: hydra_backplane.kicad_pcb  hydra_backplane.kicad_pro  hydra_backplane.kicad_sch
hydra_blade/: hydra_blade.kicad_pcb  hydra_blade.kicad_pro  hydra_blade.kicad_sch
hydra_cluster/: hydra_cluster.kicad_pcb  hydra_cluster.kicad_pro  hydra_cluster.kicad_sch
hydra_dataflow/: hydra_dataflow.kicad_pcb  hydra_dataflow.kicad_pro  hydra_dataflow.kicad_sch
hydra_node/: hydra_node.kicad_pcb  hydra_node.kicad_pro  hydra_node.kicad_sch
lib/picocompress/: picocompress.c  picocompress.h
matmul_accel/: matmul_accel.kicad_pcb  matmul_accel.kicad_pro  matmul_accel.kicad_sch
picowal/: picowal.kicad_pro  query_planner.kicad_pcb  query_planner.kicad_sch
picowal_hx/: hx_base.kicad_pcb  hx_base.kicad_sch  hx_coproc.kicad_pcb  hx_coproc.kicad_sch
picowal_hx_cu/: Makefile  context_scheduler.v  http_parser.v  ice40_stub.v  picoscript_alu.v  picoscript_branch.v  picoscript_decode.v  picowal.json  picowal_hx.pcf  picowal_hx_top.v  pipe_engine.v  spi_master.v  sram_controller.v  tb_picowal  tb_picowal.v  tb_picowal.vcd
picowal_midi/: backplane.kicad_pcb  backplane.kicad_sch  fpga_card.kicad_pcb  fpga_card.kicad_sch  nic_card.kicad_pcb  nic_card.kicad_sch
picowal_mini/: backplane.kicad_pcb  backplane.kicad_sch  cpu_card.kicad_pcb  cpu_card.kicad_sch  nic_storage_card.kicad_pcb  nic_storage_card.kicad_sch
picowal_pico/: picowal_pico.kicad_pcb  picowal_pico.kicad_sch
rtl/: activation_buffer.sv  activation_fn.sv  dma_engine.sv  hydra_infer_pkg.sv  hydra_infer_top.sv  layer_controller.sv  mac_unit.sv  psum_buffer.sv  serdes_ring.sv  spi_slave.sv  systolic_array.sv  weight_buffer.sv
rtl/addr_prop/: addr_prop_pipeline.v  addr_prop_sram_stage.v  addr_prop_stage.v  addr_prop_top.v  tb_addr_prop.v
rtl/matmul/: adder_tree_8.v  analogue_sum_sram.v  bitnet_hx8k_splice.v  bitnet_mega_array.v  bitnet_multiply.v  bitnet_tile_8x8.v  dataflow_cascade.v  dataflow_layer.v  dataflow_network.v  matmul_top.v  mem_switch_fabric.v  sram_dot8.v  sram_matmul_engine.v  sram_shared_bus.v  sram_switched_multiply.v  sram_weight_precompute.v  switched_dot8.v  switched_matmul.v  switched_multiply.v  systolic_sram_chain.v  tb_switched_matmul.v  tile_chain.v  tile_matmul_8x8.v  weight_loader.v
rtl/matmul/bitnet_splice/: chip_0.v  chip_1.v  chip_2.v  chip_3.v  splice_top.v
rtl/matmul/bitnet_tiles/: bitnet_chain_top.v  bitnet_layer_0.v  bitnet_layer_1.v  bitnet_layer_2.v  bitnet_layer_3.v  bitnet_layer_4.v  bitnet_layer_5.v  bitnet_layer_6.v  bitnet_layer_7.v  bitnet_layer_8.v  (+1 more)
rtl/sram_tile/: emmc_host.v  emmc_host_1bit.v  emmc_kv_tile.v  emmc_stripe_kv.v  eth_crc32.v  flash_block_dev.v  flash_page_dev.v  flash_page_fast.v  flash_tile_top.v  fpga_pico_bus.v  gbe_flash_tile.v  lvds_tile_link.v  nand_kv_node.v  net_eth_mac.v  net_ip_stack.v  net_page_server.v  net_socket_mux.v  net_stack_top.v  net_tcp_engine.v  nor_emmc_kv.v  nor_flash_raid.v  onfi_nand_ctrl.v  proto_dhcp_dns.v  proto_http.v  proto_smb2.v  query_bypass.v  rgmii_mac.v  sata_8b10b.v  sata_command.v  sata_crc32.v  sata_kv_engine.v  sata_kv_node.v  sata_link.v  sata_phy.v  sata_scrambler.v  sata_transport.v  spi_sd_reader.v  sram_bus_ctrl.v  sram_loader.v  sram_tile_top.v  (+21 more)
src/: crypto.c  crypto.h  field_index.c  field_index.h  hs_config.h  key_store.c  key_store.h  kv_flash.c  kv_flash.h  kv_sd.c  kv_sd.h  kv_store.h  lwipopts.h  main.c  mbedtls_config.h  metadata_dict.c  metadata_dict.h  net_core.c  net_core.h  query.c  query.h  storage.c  storage.h  udp_wal.c  udp_wal.h  user_auth.c  user_auth.h  wal_defs.h  wal_dma.c  wal_dma.h  wal_engine.c  wal_engine.h  wal_fence.h  wifi_config.h.example  wifi_config.h.template
src/httpd/: picocompress.mjs  web_server.c  web_server.h
